--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -42,14 +42,15 @@ http {
 			}
 
 			client_max_body_size 50M;
+		proxy_hide_header    Content-Security-Policy;
+        	proxy_hide_header    X-Frame-Options;
       		proxy_set_header Upgrade $http_upgrade;
       		proxy_set_header Connection "upgrade";
       		proxy_set_header Host $http_host;
-      		proxy_set_header X-Frame-Options SAMEORIGIN;
       		proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_redirect off;
-			proxy_pass http://app_server;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_redirect off;
+		proxy_pass http://app_server;
 		}
 	}
 }
